# metal0

./: README.md
catkin_ws/src/: README.md
catkin_ws/src/andbot/: CMakeLists.txt  package.xml
catkin_ws/src/andbot/config/fake/: base_local_planner_params.yaml
catkin_ws/src/andbot/launch/: arm.launch
catkin_ws/src/andbot_test_joint/src/: action.cpp  right_arm_moveR.cpp
catkin_ws/src/hyperlync_simulator_2/hyperlync_robot/robot_description/urdf/: andbot.xacro
catkin_ws/src/robot_pose_ekf/: robot_pose_ekf.launch
catkin_ws/src/robot_pose_ekf/src/: gyro_node.py
catkin_ws/src/vision/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/vision/launch/: vision.launch
catkin_ws/src/vision/msg/: RecoGoal.msg  RecoResults.msg
catkin_ws/src/vision/src/: BodyDetector.cpp  BodyRecognizer.h  BodyRecognizerTeacher.cpp  BodyRecognizerTeacher.h  FaceDetector.cpp  FaceDetector.h  FaceRecog.cpp  FaceRecognizerTeacher.cpp  FeedbackPublisher.cpp  FeedbackPublisher.h  FindBody.cpp  FindBody.h  FindObject.cpp  FindObject.h  README  VisionNode.cpp  VisionNode.h  main.cpp  processor.h  vision.h
catkin_ws/src/visionint/: CMakeLists.txt  package.xml
catkin_ws/src/visionint/bodies/: person_0.yml
catkin_ws/src/visionint/launch/: visionint.launch
catkin_ws/src/visionint/objects/: objects_info.csv.ORIG
catkin_ws/src/visionint/src/: BodyDetector.cpp  BodyDetector.h  BodyRecognizer.cpp  FaceDetector.cpp  FaceRecog.cpp  FaceRecog.h  FaceRecognizerTeacher.cpp  FaceRecognizerTeacher.h  FeedbackPublisher.cpp  FeedbackPublisher.cpp~  FeedbackPublisher.h  FindObject.cpp  FindObject.h  VisionNodeInt32.cpp  VisionNodeInt32.h  int_publisher.cpp  main.cpp  vision.h
mcu_control/arms_control/: joint_rs485_slave.ino
mcu_control/arms_control/RS485_master/: RS485_master.ino
mcu_control/arms_control/Testing_joint_position_controller_VNH5019_promini/: Readme.md
mcu_control/arms_control/hidden/Testing_joint_position_controller_VNH5019_promini/: Testing_joint_position_controller_VNH5019_promini.ino
mcu_control/arms_control/joint_RS485_slave/: joint_RS485_slave.ino
mcu_control/arms_control/mega2560_code/: mega2560_code.ino
mcu_control/base_control/mega_base/: mega_base.ino
mcu_control/base_control/uno_base/: README.md  uno_base.ino
mcu_control/current_read/: current_read.ino
mcu_control/sharpIR5_Code/: sharpIR5_Code.ino
