<package format="2">
  <name>visionint</name>
  <version>0.0.1</version>
  <description>
    Robo vision
  </description>
  <author>Theos</author>
  <maintainer email="theos@theos.systems">Theos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
</package>
